Latest working code for the balance rover

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,41 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:default]
+[env:balance_main]
 platform = espressif32
-board = motorgo-mini-v1.1
+board = motorgo-mini-v2.0
 framework = arduino
+build_flags =
+    -D WIFI_SSID=\"${sysenv.WIFI_SSID_ENV_VAR}\"
+    -D WIFI_PASSWORD=\"${sysenv.WIFI_PASSWORD_ENV_VAR}\"
+lib_deps =
+    https://github.com/Every-Flavor-Robotics/motorgo-mini-driver.git#feature-70/add-motor-parameters
+    https://github.com/Every-Flavor-Robotics/imu-go.git
+build_src_filter = +<balance_main.cpp>
+
+[env:slider_main]
+platform = espressif32
+board = motorgo-mini-v2.0
+framework = arduino
+build_flags =
+    -D WIFI_SSID=\"${sysenv.WIFI_SSID_ENV_VAR}\"
+    -D WIFI_PASSWORD=\"${sysenv.WIFI_PASSWORD_ENV_VAR}\"
+lib_deps =
+    https://github.com/Every-Flavor-Robotics/motorgo-mini-driver.git#feature-70/add-motor-parameters
+    https://github.com/Every-Flavor-Robotics/imu-go.git
+build_src_filter = +<slider_main.cpp>
+upload_protocol = espota
+upload_port = slider.local
+
+[env:ota_main]
+platform = espressif32
+board = motorgo-mini-v1.2
+framework = arduino
+build_flags =
+    -D WIFI_SSID=\"${sysenv.WIFI_SSID_ENV_VAR}\"
+    -D WIFI_PASSWORD=\"${sysenv.WIFI_PASSWORD_ENV_VAR}\"
+lib_deps =
+    ArduinoOTA
+    Wifi
+
+build_src_filter = +<ota.cpp>
